# Formal2020

./: Readme.md
determinizationNFA/: CMakeLists.txt  NFA.cpp  NFA.h  main.cpp  test.cpp
minimizingCDFA/: CDFA.cpp  CDFA.h  CMakeLists.txt  Readme.md  main.cpp  mainTest.cpp  test.cpp
